--- a/librespot/config.json
+++ b/librespot/config.json
@@ -1,6 +1,6 @@
 {
   "name": "librespot",
-  "version": "v0.3.1.2",
+  "version": "v0.4.2",
   "slug": "librespot",
   "description": "spotify",
   "startup": "services",
@@ -9,7 +9,7 @@
   "host_network": true,
   "host_dbus": true,
   "options": { 
-    "librespotopts": "-v -n HomeAssistant --backend pipe --device /share/snapfifo/librespot"
+    "librespotopts": "-v -n Alle -b 320 --device-type=speaker --backend pipe --device /share/snapfifo/librespot"
   },
   "schema": {
     "librespotopts": "str"
